--- a/Hartree-Fock/hartree_fock.ipynb
+++ b/Hartree-Fock/hartree_fock.ipynb
@@ -11,9 +11,10 @@
      "text": [
       "Molecule\n",
       "Basis Set: 6-21G\n",
-      "Total Number of Electrons: 2\n",
+      "Total Number of Electrons: 3\n",
       "Atoms: \n",
-      "     Atomic Number: 2, Electrons: 2, Coordinate: X: 1 Y: 1 Z: 1\n"
+      "     Atomic Number: 2, Electrons: 2, Coordinate: X: 1 Y: 1 Z: 1\n",
+      "     Atomic Number: 1, Electrons: 1, Coordinate: X: 1 Y: 1 Z: 2.4\n"
      ]
     }
    ],
@@ -26,7 +27,7 @@
     "import numpy as np\n",
     "from molecule import atom\n",
     "from molecule import vector\n",
-    "from molecule import guassian\n",
+    "from molecule import gaussian\n",
     "from molecule import molecule\n",
     "from notebookImporter import importNotebook\n",
     "\n",
@@ -45,7 +46,7 @@
     "R = 1.4\n",
     "system = molecule()\n",
     "system.addAtom(atom(vector(1,1,1), 2, 2))\n",
-    "#system.addAtom(atom(vector(1,1,1+R), 1,1))\n",
+    "system.addAtom(atom(vector(1,1,1+R), 1,1))\n",
     "\n",
     "#add a basis set\n",
     "system.addBasis(\"6-21G\")\n",
@@ -65,34 +66,117 @@
      "output_type": "stream",
      "text": [
       "Overlap Matrix: \n",
-      "[[1.         0.59521595]\n",
-      " [0.59521595 1.        ]]\n",
+      "[[1.         0.59521595 0.24078493 0.27903177]\n",
+      " [0.59521595 1.         0.5135924  0.70990153]\n",
+      " [0.24078493 0.5135924  1.         0.64589812]\n",
+      " [0.27903177 0.70990153 0.64589812 1.        ]]\n",
       "\n",
       "Electron Kinetic Energy Matrix: \n",
-      "[[3.9161238 0.5789494]\n",
-      " [0.5789494 0.5744895]]\n",
+      "[[3.9161238  0.5789494  0.06527748 0.10995836]\n",
+      " [0.5789494  0.5744895  0.26673973 0.22117837]\n",
+      " [0.06527748 0.26673973 1.54940495 0.29315085]\n",
+      " [0.10995836 0.22117837 0.29315085 0.27478737]]\n",
       "\n",
       "Nucli 0-Electron Attraction Matrix: \n",
-      "[[-5.48968847 -2.23529223]\n",
-      " [-2.23529223 -1.97512902]]\n",
+      "[[-5.48968847 -2.23529223 -0.83414691 -0.98929468]\n",
+      " [-2.23529223 -1.97512902 -0.91943322 -1.16038696]\n",
+      " [-0.83414691 -0.91943322 -1.41570339 -0.88168287]\n",
+      " [-0.98929468 -1.16038696 -0.88168287 -1.09892616]]\n",
+      "Nucli 1-Electron Attraction Matrix: \n",
+      "[[-0.71424282 -0.4242527  -0.24436929 -0.2152917 ]\n",
+      " [-0.4242527  -0.65490881 -0.63112353 -0.51455539]\n",
+      " [-0.24436929 -0.63112353 -1.72091788 -0.78266155]\n",
+      " [-0.2152917  -0.51455539 -0.78266155 -0.68300331]]\n",
       "\n",
       "Electron Repulsion Tensor: \n",
-      "[[[[1.80325459 0.87650682]\n",
-      "   [0.87650682 0.91700828]]\n",
+      "[[[[1.80325459 0.87650682 0.33671087 0.39544301]\n",
+      "   [0.87650682 0.91700828 0.43563965 0.5507555 ]\n",
+      "   [0.33671087 0.43563965 0.69717158 0.43012808]\n",
+      "   [0.39544301 0.5507555  0.43012808 0.53697601]]\n",
       "\n",
-      "  [[0.87650682 0.45207726]\n",
-      "   [0.45207726 0.51467807]]]\n",
+      "  [[0.87650682 0.45207726 0.17593076 0.2057909 ]\n",
+      "   [0.45207726 0.51467807 0.24773703 0.31411747]\n",
+      "   [0.17593076 0.24773703 0.40754871 0.25011925]\n",
+      "   [0.2057909  0.31411747 0.25011925 0.31332654]]\n",
+      "\n",
+      "  [[0.33671087 0.17593076 0.0790018  0.08313643]\n",
+      "   [0.17593076 0.20465518 0.11925163 0.13270696]\n",
+      "   [0.0790018  0.11925163 0.21208426 0.12324228]\n",
+      "   [0.08313643 0.13270696 0.12324228 0.13999902]]\n",
+      "\n",
+      "  [[0.39544301 0.2057909  0.08313643 0.09467886]\n",
+      "   [0.2057909  0.23799497 0.12048675 0.14795437]\n",
+      "   [0.08313643 0.12048675 0.20256965 0.1227754 ]\n",
+      "   [0.09467886 0.14795437 0.1227754  0.1503204 ]]]\n",
       "\n",
       "\n",
-      " [[[0.87650682 0.45207726]\n",
-      "   [0.45207726 0.51467807]]\n",
+      " [[[0.87650682 0.45207726 0.17593076 0.2057909 ]\n",
+      "   [0.45207726 0.51467807 0.24773703 0.31411747]\n",
+      "   [0.17593076 0.24773703 0.40754871 0.25011925]\n",
+      "   [0.2057909  0.31411747 0.25011925 0.31332654]]\n",
       "\n",
-      "  [[0.91700828 0.51467807]\n",
-      "   [0.51467807 0.69831356]]]]\n",
+      "  [[0.91700828 0.51467807 0.20465518 0.23799497]\n",
+      "   [0.51467807 0.69831356 0.34646992 0.44707286]\n",
+      "   [0.20465518 0.34646992 0.61224949 0.37506619]\n",
+      "   [0.23799497 0.44707286 0.37506619 0.48264291]]\n",
+      "\n",
+      "  [[0.43563965 0.24773703 0.11925163 0.12048675]\n",
+      "   [0.24773703 0.34646992 0.23748247 0.24813949]\n",
+      "   [0.11925163 0.23748247 0.49097039 0.27661173]\n",
+      "   [0.12048675 0.24813949 0.27661173 0.30368621]]\n",
+      "\n",
+      "  [[0.5507555  0.31411747 0.13270696 0.14795437]\n",
+      "   [0.31411747 0.44707286 0.24813949 0.30256265]\n",
+      "   [0.13270696 0.24813949 0.46830287 0.28287015]\n",
+      "   [0.14795437 0.30256265 0.28287015 0.35410983]]]\n",
+      "\n",
+      "\n",
+      " [[[0.33671087 0.17593076 0.0790018  0.08313643]\n",
+      "   [0.17593076 0.20465518 0.11925163 0.13270696]\n",
+      "   [0.0790018  0.11925163 0.21208426 0.12324228]\n",
+      "   [0.08313643 0.13270696 0.12324228 0.13999902]]\n",
+      "\n",
+      "  [[0.43563965 0.24773703 0.11925163 0.12048675]\n",
+      "   [0.24773703 0.34646992 0.23748247 0.24813949]\n",
+      "   [0.11925163 0.23748247 0.49097039 0.27661173]\n",
+      "   [0.12048675 0.24813949 0.27661173 0.30368621]]\n",
+      "\n",
+      "  [[0.69717158 0.40754871 0.21208426 0.20256965]\n",
+      "   [0.40754871 0.61224949 0.49097039 0.46830287]\n",
+      "   [0.21208426 0.49097039 1.14014487 0.61140189]\n",
+      "   [0.20256965 0.46830287 0.61140189 0.62636977]]\n",
+      "\n",
+      "  [[0.43012808 0.25011925 0.12324228 0.1227754 ]\n",
+      "   [0.25011925 0.37506619 0.27661173 0.28287015]\n",
+      "   [0.12324228 0.27661173 0.61140189 0.34515152]\n",
+      "   [0.1227754  0.28287015 0.34515152 0.38032857]]]\n",
+      "\n",
+      "\n",
+      " [[[0.39544301 0.2057909  0.08313643 0.09467886]\n",
+      "   [0.2057909  0.23799497 0.12048675 0.14795437]\n",
+      "   [0.08313643 0.12048675 0.20256965 0.1227754 ]\n",
+      "   [0.09467886 0.14795437 0.1227754  0.1503204 ]]\n",
+      "\n",
+      "  [[0.5507555  0.31411747 0.13270696 0.14795437]\n",
+      "   [0.31411747 0.44707286 0.24813949 0.30256265]\n",
+      "   [0.13270696 0.24813949 0.46830287 0.28287015]\n",
+      "   [0.14795437 0.30256265 0.28287015 0.35410983]]\n",
+      "\n",
+      "  [[0.43012808 0.25011925 0.12324228 0.1227754 ]\n",
+      "   [0.25011925 0.37506619 0.27661173 0.28287015]\n",
+      "   [0.12324228 0.27661173 0.61140189 0.34515152]\n",
+      "   [0.1227754  0.28287015 0.34515152 0.38032857]]\n",
+      "\n",
+      "  [[0.53697601 0.31332654 0.13999902 0.1503204 ]\n",
+      "   [0.31332654 0.48264291 0.30368621 0.35410983]\n",
+      "   [0.13999902 0.30368621 0.62636977 0.38032857]\n",
+      "   [0.1503204  0.35410983 0.38032857 0.48295628]]]]\n",
       "\n",
       "Electronic Hamiltonian :\n",
-      "[[-1.57356468 -1.65634283]\n",
-      " [-1.65634283 -1.40063952]]\n",
+      "[[-2.2878075  -2.08059553 -1.01323873 -1.09462803]\n",
+      " [-2.08059553 -2.05554833 -1.28381702 -1.45376398]\n",
+      " [-1.01323873 -1.28381702 -1.58721633 -1.37119356]\n",
+      " [-1.09462803 -1.45376398 -1.37119356 -1.50714211]]\n",
       "\n"
      ]
     }
@@ -163,23 +247,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SCF Iteration #1, Electronic Energy: -2.7351099044716616 Hartrees, Total Energy: -2.7351099044716616 Hartrees\n",
-      "SCF Iteration #2, Electronic Energy: -2.835262969514034 Hartrees, Total Energy: -2.835262969514034 Hartrees\n",
-      "SCF Iteration #3, Electronic Energy: -2.835678080552964 Hartrees, Total Energy: -2.835678080552964 Hartrees\n",
-      "SCF Iteration #4, Electronic Energy: -2.8356798659098947 Hartrees, Total Energy: -2.8356798659098947 Hartrees\n",
-      "SCF Iteration #5, Electronic Energy: -2.835679873607232 Hartrees, Total Energy: -2.835679873607232 Hartrees\n",
-      "SCF Iteration #6, Electronic Energy: -2.835679873640423 Hartrees, Total Energy: -2.835679873640423 Hartrees\n",
-      "SCF Iteration #7, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n",
-      "SCF Iteration #8, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
-      "SCF Iteration #9, Electronic Energy: -2.8356798736405677 Hartrees, Total Energy: -2.8356798736405677 Hartrees\n",
-      "SCF Iteration #10, Electronic Energy: -2.8356798736405673 Hartrees, Total Energy: -2.8356798736405673 Hartrees\n",
-      "SCF Iteration #11, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
-      "SCF Iteration #12, Electronic Energy: -2.835679873640566 Hartrees, Total Energy: -2.835679873640566 Hartrees\n",
-      "SCF Iteration #13, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
-      "SCF Iteration #14, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n",
-      "SCF Iteration #15, Electronic Energy: -2.835679873640567 Hartrees, Total Energy: -2.835679873640567 Hartrees\n",
-      "SCF Iteration #16, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n",
-      "SCF Iteration #17, Electronic Energy: -2.8356798736405664 Hartrees, Total Energy: -2.8356798736405664 Hartrees\n"
+      "[-2.70692115 -1.32641131 -0.48646321  0.1462177 ]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #1, Electronic Energy: -4.211116231043732 Hartrees, Total Energy: -2.7825448024723034 Hartrees\n",
+      "[-1.55252674 -0.2354201   0.56147615  1.80562846]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #2, Electronic Energy: -4.314511994098726 Hartrees, Total Energy: -2.8859405655272976 Hartrees\n",
+      "[-1.64771568 -0.23714703  0.55822297  1.71396999]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #3, Electronic Energy: -4.314992868163754 Hartrees, Total Energy: -2.8864214395923256 Hartrees\n",
+      "[-1.6532159  -0.23761129  0.55824422  1.70675293]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #4, Electronic Energy: -4.31500040632616 Hartrees, Total Energy: -2.886428977754731 Hartrees\n",
+      "[-1.65366117 -0.23765045  0.55829034  1.70609021]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #5, Electronic Energy: -4.3150006663960125 Hartrees, Total Energy: -2.8864292378245837 Hartrees\n",
+      "[-1.65371469 -0.23765225  0.55830464  1.70600008]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #6, Electronic Energy: -4.3150006764480855 Hartrees, Total Energy: -2.8864292478766567 Hartrees\n",
+      "[-1.65372336 -0.23765182  0.55830826  1.70598433]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #7, Electronic Energy: -4.315000676843312 Hartrees, Total Energy: -2.8864292482718827 Hartrees\n",
+      "[-1.65372495 -0.23765161  0.5583091   1.70598131]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #8, Electronic Energy: -4.3150006768589675 Hartrees, Total Energy: -2.8864292482875387 Hartrees\n",
+      "[-1.65372526 -0.23765154  0.55830929  1.70598071]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #9, Electronic Energy: -4.315000676859594 Hartrees, Total Energy: -2.886429248288165 Hartrees\n",
+      "[-1.65372532 -0.23765153  0.55830933  1.7059806 ]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #10, Electronic Energy: -4.315000676859618 Hartrees, Total Energy: -2.886429248288189 Hartrees\n",
+      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #11, Electronic Energy: -4.315000676859617 Hartrees, Total Energy: -2.886429248288188 Hartrees\n",
+      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #12, Electronic Energy: -4.315000676859623 Hartrees, Total Energy: -2.886429248288194 Hartrees\n",
+      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #13, Electronic Energy: -4.315000676859618 Hartrees, Total Energy: -2.886429248288189 Hartrees\n",
+      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #14, Electronic Energy: -4.31500067685962 Hartrees, Total Energy: -2.8864292482881915 Hartrees\n",
+      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #15, Electronic Energy: -4.3150006768596185 Hartrees, Total Energy: -2.8864292482881897 Hartrees\n",
+      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
+      "\n",
+      "\n",
+      "SCF Iteration #16, Electronic Energy: -4.3150006768596185 Hartrees, Total Energy: -2.8864292482881897 Hartrees\n"
      ]
     }
    ],
@@ -198,7 +329,7 @@
     "    \n",
     "   #diagnolize the Fock Matrix to obtain the MOs and the their respective energies\n",
     "    MOEnergy, MO = np.linalg.eigh(F)\n",
-    "\n",
+    "    \n",
     "    #Transform the MO basis MOs to an AO basis\n",
     "    C = X * MO\n",
     "    \n",
