Updated Readmes and cleaned up the code.

--- a/Hartree-Fock/hartree_fock.ipynb
+++ b/Hartree-Fock/hartree_fock.ipynb
@@ -11,9 +11,9 @@
      "text": [
       "Molecule\n",
       "Basis Set: 6-21G\n",
-      "Total Number of Electrons: 3\n",
+      "Total Number of Electrons: 2\n",
       "Atoms: \n",
-      "     Atomic Number: 2, Electrons: 2, Coordinate: X: 1 Y: 1 Z: 1\n",
+      "     Atomic Number: 1, Electrons: 1, Coordinate: X: 1 Y: 1 Z: 1\n",
       "     Atomic Number: 1, Electrons: 1, Coordinate: X: 1 Y: 1 Z: 2.4\n"
      ]
     }
@@ -32,8 +32,8 @@
     "from notebookImporter import importNotebook\n",
     "\n",
     "#import integrals notebook for the hartree method\n",
-    "integrals = importNotebook(\"hartree_integrals\")\n",
-    "scf = importNotebook(\"hartree_scf\")\n",
+    "integrals = importNotebook(\"Hartree_Integrals\")\n",
+    "scf = importNotebook(\"Hartree_SCF\")\n",
     "\n",
     "#define SCF convergence critera, and max number of iteration cycles\n",
     "SCF_CONVERGENCE = pow(10, -100)\n",
@@ -45,7 +45,7 @@
     "#generate an h2 atom with a distance of 1.4 AU to compare with Szabo pg. 160\n",
     "R = 1.4\n",
     "system = molecule()\n",
-    "system.addAtom(atom(vector(1,1,1), 2, 2))\n",
+    "system.addAtom(atom(vector(1,1,1), 1, 1))\n",
     "system.addAtom(atom(vector(1,1,1+R), 1,1))\n",
     "\n",
     "#add a basis set\n",
@@ -58,7 +58,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -66,117 +66,117 @@
      "output_type": "stream",
      "text": [
       "Overlap Matrix: \n",
-      "[[1.         0.59521595 0.24078493 0.27903177]\n",
-      " [0.59521595 1.         0.5135924  0.70990153]\n",
-      " [0.24078493 0.5135924  1.         0.64589812]\n",
-      " [0.27903177 0.70990153 0.64589812 1.        ]]\n",
+      "[[1.         0.64589812 0.40352864 0.48019147]\n",
+      " [0.64589812 1.         0.48019147 0.83566476]\n",
+      " [0.40352864 0.48019147 1.         0.64589812]\n",
+      " [0.48019147 0.83566476 0.64589812 1.        ]]\n",
       "\n",
       "Electron Kinetic Energy Matrix: \n",
-      "[[3.9161238  0.5789494  0.06527748 0.10995836]\n",
-      " [0.5789494  0.5744895  0.26673973 0.22117837]\n",
-      " [0.06527748 0.26673973 1.54940495 0.29315085]\n",
-      " [0.10995836 0.22117837 0.29315085 0.27478737]]\n",
+      "[[1.54940495 0.29315085 0.21101261 0.17473316]\n",
+      " [0.29315085 0.27478737 0.17473316 0.2021468 ]\n",
+      " [0.21101261 0.17473316 1.54940495 0.29315085]\n",
+      " [0.17473316 0.2021468  0.29315085 0.27478737]]\n",
       "\n",
       "Nucli 0-Electron Attraction Matrix: \n",
-      "[[-5.48968847 -2.23529223 -0.83414691 -0.98929468]\n",
-      " [-2.23529223 -1.97512902 -0.91943322 -1.16038696]\n",
-      " [-0.83414691 -0.91943322 -1.41570339 -0.88168287]\n",
-      " [-0.98929468 -1.16038696 -0.88168287 -1.09892616]]\n",
+      "[[-1.72091788 -0.78266155 -0.48198418 -0.56870018]\n",
+      " [-0.78266155 -0.68300331 -0.3746172  -0.53836955]\n",
+      " [-0.48198418 -0.3746172  -0.7078517  -0.44084143]\n",
+      " [-0.56870018 -0.53836955 -0.44084143 -0.54946308]]\n",
       "Nucli 1-Electron Attraction Matrix: \n",
-      "[[-0.71424282 -0.4242527  -0.24436929 -0.2152917 ]\n",
-      " [-0.4242527  -0.65490881 -0.63112353 -0.51455539]\n",
-      " [-0.24436929 -0.63112353 -1.72091788 -0.78266155]\n",
-      " [-0.2152917  -0.51455539 -0.78266155 -0.68300331]]\n",
+      "[[-0.7078517  -0.44084143 -0.48198418 -0.3746172 ]\n",
+      " [-0.44084143 -0.54946308 -0.56870018 -0.53836955]\n",
+      " [-0.48198418 -0.56870018 -1.72091788 -0.78266155]\n",
+      " [-0.3746172  -0.53836955 -0.78266155 -0.68300331]]\n",
       "\n",
       "Electron Repulsion Tensor: \n",
-      "[[[[1.80325459 0.87650682 0.33671087 0.39544301]\n",
-      "   [0.87650682 0.91700828 0.43563965 0.5507555 ]\n",
-      "   [0.33671087 0.43563965 0.69717158 0.43012808]\n",
-      "   [0.39544301 0.5507555  0.43012808 0.53697601]]\n",
+      "[[[[1.14014487 0.61140189 0.38206058 0.44784188]\n",
+      "   [0.61140189 0.62636977 0.34091364 0.49818429]\n",
+      "   [0.38206058 0.34091364 0.67487206 0.413722  ]\n",
+      "   [0.44784188 0.49818429 0.413722   0.52000824]]\n",
       "\n",
-      "  [[0.87650682 0.45207726 0.17593076 0.2057909 ]\n",
-      "   [0.45207726 0.51467807 0.24773703 0.31411747]\n",
-      "   [0.17593076 0.24773703 0.40754871 0.25011925]\n",
-      "   [0.2057909  0.31411747 0.25011925 0.31332654]]\n",
+      "  [[0.61140189 0.34515152 0.21634302 0.25367352]\n",
+      "   [0.34515152 0.38032857 0.20500254 0.30420737]\n",
+      "   [0.21634302 0.20500254 0.413722   0.25314596]\n",
+      "   [0.25367352 0.30420737 0.25314596 0.32215346]]\n",
       "\n",
-      "  [[0.33671087 0.17593076 0.0790018  0.08313643]\n",
-      "   [0.17593076 0.20465518 0.11925163 0.13270696]\n",
-      "   [0.0790018  0.11925163 0.21208426 0.12324228]\n",
-      "   [0.08313643 0.13270696 0.12324228 0.13999902]]\n",
+      "  [[0.38206058 0.21634302 0.17120945 0.16981097]\n",
+      "   [0.21634302 0.23858218 0.16981097 0.20918696]\n",
+      "   [0.17120945 0.16981097 0.38206058 0.21634302]\n",
+      "   [0.16981097 0.20918696 0.21634302 0.23858218]]\n",
       "\n",
-      "  [[0.39544301 0.2057909  0.08313643 0.09467886]\n",
-      "   [0.2057909  0.23799497 0.12048675 0.14795437]\n",
-      "   [0.08313643 0.12048675 0.20256965 0.1227754 ]\n",
-      "   [0.09467886 0.14795437 0.1227754  0.1503204 ]]]\n",
-      "\n",
-      "\n",
-      " [[[0.87650682 0.45207726 0.17593076 0.2057909 ]\n",
-      "   [0.45207726 0.51467807 0.24773703 0.31411747]\n",
-      "   [0.17593076 0.24773703 0.40754871 0.25011925]\n",
-      "   [0.2057909  0.31411747 0.25011925 0.31332654]]\n",
-      "\n",
-      "  [[0.91700828 0.51467807 0.20465518 0.23799497]\n",
-      "   [0.51467807 0.69831356 0.34646992 0.44707286]\n",
-      "   [0.20465518 0.34646992 0.61224949 0.37506619]\n",
-      "   [0.23799497 0.44707286 0.37506619 0.48264291]]\n",
-      "\n",
-      "  [[0.43563965 0.24773703 0.11925163 0.12048675]\n",
-      "   [0.24773703 0.34646992 0.23748247 0.24813949]\n",
-      "   [0.11925163 0.23748247 0.49097039 0.27661173]\n",
-      "   [0.12048675 0.24813949 0.27661173 0.30368621]]\n",
-      "\n",
-      "  [[0.5507555  0.31411747 0.13270696 0.14795437]\n",
-      "   [0.31411747 0.44707286 0.24813949 0.30256265]\n",
-      "   [0.13270696 0.24813949 0.46830287 0.28287015]\n",
-      "   [0.14795437 0.30256265 0.28287015 0.35410983]]]\n",
+      "  [[0.44784188 0.25367352 0.16981097 0.19017743]\n",
+      "   [0.25367352 0.2811149  0.16420823 0.23169594]\n",
+      "   [0.16981097 0.16420823 0.34091364 0.20500254]\n",
+      "   [0.19017743 0.23169594 0.20500254 0.25160104]]]\n",
       "\n",
       "\n",
-      " [[[0.33671087 0.17593076 0.0790018  0.08313643]\n",
-      "   [0.17593076 0.20465518 0.11925163 0.13270696]\n",
-      "   [0.0790018  0.11925163 0.21208426 0.12324228]\n",
-      "   [0.08313643 0.13270696 0.12324228 0.13999902]]\n",
+      " [[[0.61140189 0.34515152 0.21634302 0.25367352]\n",
+      "   [0.34515152 0.38032857 0.20500254 0.30420737]\n",
+      "   [0.21634302 0.20500254 0.413722   0.25314596]\n",
+      "   [0.25367352 0.30420737 0.25314596 0.32215346]]\n",
       "\n",
-      "  [[0.43563965 0.24773703 0.11925163 0.12048675]\n",
-      "   [0.24773703 0.34646992 0.23748247 0.24813949]\n",
-      "   [0.11925163 0.23748247 0.49097039 0.27661173]\n",
-      "   [0.12048675 0.24813949 0.27661173 0.30368621]]\n",
+      "  [[0.62636977 0.38032857 0.23858218 0.2811149 ]\n",
+      "   [0.38032857 0.48295628 0.25160104 0.39183198]\n",
+      "   [0.23858218 0.25160104 0.52000824 0.32215346]\n",
+      "   [0.2811149  0.39183198 0.32215346 0.43088269]]\n",
       "\n",
-      "  [[0.69717158 0.40754871 0.21208426 0.20256965]\n",
-      "   [0.40754871 0.61224949 0.49097039 0.46830287]\n",
-      "   [0.21208426 0.49097039 1.14014487 0.61140189]\n",
-      "   [0.20256965 0.46830287 0.61140189 0.62636977]]\n",
+      "  [[0.34091364 0.20500254 0.16981097 0.16420823]\n",
+      "   [0.20500254 0.25160104 0.19017743 0.23169594]\n",
+      "   [0.16981097 0.19017743 0.44784188 0.25367352]\n",
+      "   [0.16420823 0.23169594 0.25367352 0.2811149 ]]\n",
       "\n",
-      "  [[0.43012808 0.25011925 0.12324228 0.1227754 ]\n",
-      "   [0.25011925 0.37506619 0.27661173 0.28287015]\n",
-      "   [0.12324228 0.27661173 0.61140189 0.34515152]\n",
-      "   [0.1227754  0.28287015 0.34515152 0.38032857]]]\n",
+      "  [[0.49818429 0.30420737 0.20918696 0.23169594]\n",
+      "   [0.30420737 0.39183198 0.23169594 0.33726556]\n",
+      "   [0.20918696 0.23169594 0.49818429 0.30420737]\n",
+      "   [0.23169594 0.33726556 0.30420737 0.39183198]]]\n",
       "\n",
       "\n",
-      " [[[0.39544301 0.2057909  0.08313643 0.09467886]\n",
-      "   [0.2057909  0.23799497 0.12048675 0.14795437]\n",
-      "   [0.08313643 0.12048675 0.20256965 0.1227754 ]\n",
-      "   [0.09467886 0.14795437 0.1227754  0.1503204 ]]\n",
+      " [[[0.38206058 0.21634302 0.17120945 0.16981097]\n",
+      "   [0.21634302 0.23858218 0.16981097 0.20918696]\n",
+      "   [0.17120945 0.16981097 0.38206058 0.21634302]\n",
+      "   [0.16981097 0.20918696 0.21634302 0.23858218]]\n",
       "\n",
-      "  [[0.5507555  0.31411747 0.13270696 0.14795437]\n",
-      "   [0.31411747 0.44707286 0.24813949 0.30256265]\n",
-      "   [0.13270696 0.24813949 0.46830287 0.28287015]\n",
-      "   [0.14795437 0.30256265 0.28287015 0.35410983]]\n",
+      "  [[0.34091364 0.20500254 0.16981097 0.16420823]\n",
+      "   [0.20500254 0.25160104 0.19017743 0.23169594]\n",
+      "   [0.16981097 0.19017743 0.44784188 0.25367352]\n",
+      "   [0.16420823 0.23169594 0.25367352 0.2811149 ]]\n",
       "\n",
-      "  [[0.43012808 0.25011925 0.12324228 0.1227754 ]\n",
-      "   [0.25011925 0.37506619 0.27661173 0.28287015]\n",
-      "   [0.12324228 0.27661173 0.61140189 0.34515152]\n",
-      "   [0.1227754  0.28287015 0.34515152 0.38032857]]\n",
+      "  [[0.67487206 0.413722   0.38206058 0.34091364]\n",
+      "   [0.413722   0.52000824 0.44784188 0.49818429]\n",
+      "   [0.38206058 0.44784188 1.14014487 0.61140189]\n",
+      "   [0.34091364 0.49818429 0.61140189 0.62636977]]\n",
       "\n",
-      "  [[0.53697601 0.31332654 0.13999902 0.1503204 ]\n",
-      "   [0.31332654 0.48264291 0.30368621 0.35410983]\n",
-      "   [0.13999902 0.30368621 0.62636977 0.38032857]\n",
-      "   [0.1503204  0.35410983 0.38032857 0.48295628]]]]\n",
+      "  [[0.413722   0.25314596 0.21634302 0.20500254]\n",
+      "   [0.25314596 0.32215346 0.25367352 0.30420737]\n",
+      "   [0.21634302 0.25367352 0.61140189 0.34515152]\n",
+      "   [0.20500254 0.30420737 0.34515152 0.38032857]]]\n",
+      "\n",
+      "\n",
+      " [[[0.44784188 0.25367352 0.16981097 0.19017743]\n",
+      "   [0.25367352 0.2811149  0.16420823 0.23169594]\n",
+      "   [0.16981097 0.16420823 0.34091364 0.20500254]\n",
+      "   [0.19017743 0.23169594 0.20500254 0.25160104]]\n",
+      "\n",
+      "  [[0.49818429 0.30420737 0.20918696 0.23169594]\n",
+      "   [0.30420737 0.39183198 0.23169594 0.33726556]\n",
+      "   [0.20918696 0.23169594 0.49818429 0.30420737]\n",
+      "   [0.23169594 0.33726556 0.30420737 0.39183198]]\n",
+      "\n",
+      "  [[0.413722   0.25314596 0.21634302 0.20500254]\n",
+      "   [0.25314596 0.32215346 0.25367352 0.30420737]\n",
+      "   [0.21634302 0.25367352 0.61140189 0.34515152]\n",
+      "   [0.20500254 0.30420737 0.34515152 0.38032857]]\n",
+      "\n",
+      "  [[0.52000824 0.32215346 0.23858218 0.25160104]\n",
+      "   [0.32215346 0.43088269 0.2811149  0.39183198]\n",
+      "   [0.23858218 0.2811149  0.62636977 0.38032857]\n",
+      "   [0.25160104 0.39183198 0.38032857 0.48295628]]]]\n",
       "\n",
       "Electronic Hamiltonian :\n",
-      "[[-2.2878075  -2.08059553 -1.01323873 -1.09462803]\n",
-      " [-2.08059553 -2.05554833 -1.28381702 -1.45376398]\n",
-      " [-1.01323873 -1.28381702 -1.58721633 -1.37119356]\n",
-      " [-1.09462803 -1.45376398 -1.37119356 -1.50714211]]\n",
+      "[[-0.87936463 -0.93035213 -0.75295575 -0.76858423]\n",
+      " [-0.93035213 -0.95767903 -0.76858423 -0.8745923 ]\n",
+      " [-0.75295575 -0.76858423 -0.87936463 -0.93035213]\n",
+      " [-0.76858423 -0.8745923  -0.93035213 -0.95767903]]\n",
       "\n"
      ]
     }
@@ -184,7 +184,7 @@
    "source": [
     "#Step 2\n",
     "#Calculate Integrals\n",
-    "#Overlap, KE, Nuclear Attraaction, and electron repulsion\n",
+    "#Overlap, KE, Nuclear Attraaction, and Electron Repulsion\n",
     "S = integrals.overlap(system)\n",
     "print(\"Overlap Matrix: \")\n",
     "print(np.matrix(S))\n",
@@ -247,70 +247,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.70692115 -1.32641131 -0.48646321  0.1462177 ]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #1, Electronic Energy: -4.211116231043732 Hartrees, Total Energy: -2.7825448024723034 Hartrees\n",
-      "[-1.55252674 -0.2354201   0.56147615  1.80562846]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #2, Electronic Energy: -4.314511994098726 Hartrees, Total Energy: -2.8859405655272976 Hartrees\n",
-      "[-1.64771568 -0.23714703  0.55822297  1.71396999]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #3, Electronic Energy: -4.314992868163754 Hartrees, Total Energy: -2.8864214395923256 Hartrees\n",
-      "[-1.6532159  -0.23761129  0.55824422  1.70675293]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #4, Electronic Energy: -4.31500040632616 Hartrees, Total Energy: -2.886428977754731 Hartrees\n",
-      "[-1.65366117 -0.23765045  0.55829034  1.70609021]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #5, Electronic Energy: -4.3150006663960125 Hartrees, Total Energy: -2.8864292378245837 Hartrees\n",
-      "[-1.65371469 -0.23765225  0.55830464  1.70600008]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #6, Electronic Energy: -4.3150006764480855 Hartrees, Total Energy: -2.8864292478766567 Hartrees\n",
-      "[-1.65372336 -0.23765182  0.55830826  1.70598433]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #7, Electronic Energy: -4.315000676843312 Hartrees, Total Energy: -2.8864292482718827 Hartrees\n",
-      "[-1.65372495 -0.23765161  0.5583091   1.70598131]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #8, Electronic Energy: -4.3150006768589675 Hartrees, Total Energy: -2.8864292482875387 Hartrees\n",
-      "[-1.65372526 -0.23765154  0.55830929  1.70598071]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #9, Electronic Energy: -4.315000676859594 Hartrees, Total Energy: -2.886429248288165 Hartrees\n",
-      "[-1.65372532 -0.23765153  0.55830933  1.7059806 ]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #10, Electronic Energy: -4.315000676859618 Hartrees, Total Energy: -2.886429248288189 Hartrees\n",
-      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #11, Electronic Energy: -4.315000676859617 Hartrees, Total Energy: -2.886429248288188 Hartrees\n",
-      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #12, Electronic Energy: -4.315000676859623 Hartrees, Total Energy: -2.886429248288194 Hartrees\n",
-      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #13, Electronic Energy: -4.315000676859618 Hartrees, Total Energy: -2.886429248288189 Hartrees\n",
-      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #14, Electronic Energy: -4.31500067685962 Hartrees, Total Energy: -2.8864292482881915 Hartrees\n",
-      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #15, Electronic Energy: -4.3150006768596185 Hartrees, Total Energy: -2.8864292482881897 Hartrees\n",
-      "[-1.65372533 -0.23765152  0.55830934  1.70598057]\n",
-      "\n",
-      "\n",
-      "SCF Iteration #16, Electronic Energy: -4.3150006768596185 Hartrees, Total Energy: -2.8864292482881897 Hartrees\n"
+      "SCF Iteration #1, Electronic Energy: -1.787325702337411 Hartrees, Total Energy: -1.0730399880516965 Hartrees\n",
+      "SCF Iteration #2, Electronic Energy: -1.8361123248275082 Hartrees, Total Energy: -1.121826610541794 Hartrees\n",
+      "SCF Iteration #3, Electronic Energy: -1.837195887668721 Hartrees, Total Energy: -1.1229101733830067 Hartrees\n",
+      "SCF Iteration #4, Electronic Energy: -1.8372185977435858 Hartrees, Total Energy: -1.1229328834578713 Hartrees\n",
+      "SCF Iteration #5, Electronic Energy: -1.8372190698823805 Hartrees, Total Energy: -1.122933355596666 Hartrees\n",
+      "SCF Iteration #6, Electronic Energy: -1.837219079686689 Hartrees, Total Energy: -1.1229333654009745 Hartrees\n",
+      "SCF Iteration #7, Electronic Energy: -1.8372190798902481 Hartrees, Total Energy: -1.122933365604534 Hartrees\n",
+      "SCF Iteration #8, Electronic Energy: -1.8372190798944745 Hartrees, Total Energy: -1.1229333656087603 Hartrees\n",
+      "SCF Iteration #9, Electronic Energy: -1.837219079894562 Hartrees, Total Energy: -1.1229333656088478 Hartrees\n",
+      "SCF Iteration #10, Electronic Energy: -1.8372190798945638 Hartrees, Total Energy: -1.1229333656088496 Hartrees\n",
+      "SCF Iteration #11, Electronic Energy: -1.8372190798945638 Hartrees, Total Energy: -1.1229333656088496 Hartrees\n"
      ]
     }
    ],
@@ -327,7 +274,7 @@
     "    #diagnolze the Fock matrix and convert it to MO basis \n",
     "    F = X.transpose() * F * X \n",
     "    \n",
-    "   #diagnolize the Fock Matrix to obtain the MOs and the their respective energies\n",
+    "    #diagnolize the Fock Matrix to obtain the MOs and the their respective energies\n",
     "    MOEnergy, MO = np.linalg.eigh(F)\n",
     "    \n",
     "    #Transform the MO basis MOs to an AO basis\n",
