--- a/Hartree-Fock/hartree_scf.ipynb
+++ b/Hartree-Fock/hartree_scf.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<p>\n",
     "   <br />\n",
-    "    The self consistent field procedure(SCF) in the Hartree-Fock method is used to generate the molecular orbitals, (MOs), and their from an intial guess. The guess in this program is the most simple, and involves using the electronic hamiltonian as the starting point for the SCF. Once the MOs and their energies have been computed, they are used to generate the density matrix $P$, which is then used to construct the the electron portion of the Fock matrix, $G$. A new Fock matrix is then computed from $F=H+G$. This new Fock matrix is used again from the beginning of the SCF procedure to compute another set of MOs and energies. The expectation energy of the previous iteration is then computed and compared to the electronic expectation energy of the current iteration to determine if the two values are within a certain range of each other. If they are, the values are said to have converged and the procedure ends, if not, then the procedure will continue with other iterations in a similar fashion until convergence is reached, which represents the energy of the system, and the actual molecular orbitals. \n",
+    "    The self consistent field procedure, (SCF), in the Hartree-Fock method is used to generate the molecular orbitals, (MOs), and their eigenvalues from an intial guess. The guess in this program is the most simple, and involves using the electronic hamiltonian as the starting point for the SCF. Once the MOs and their energies have been computed, they are used to generate the density matrix $P$, which is then used to construct the the electron portion of the Fock matrix, $G$. A new Fock matrix is then computed from $F=H+G$. This new Fock matrix is used again from the beginning of the SCF procedure to compute another set of MOs and energies. The expectation energy of the previous iteration is then computed and compared to the electronic expectation energy of the current iteration to determine if the two values are within a certain range of each other. If they are, the values are said to have converged and the procedure ends, if not, then the procedure will continue with other iterations in a similar fashion until convergence is reached, and the molecular orbitals and the expectation energy of the system are as accurate as the theory can compute. \n",
     "   <br />\n",
     "</p>   \n",
     "\n",
@@ -147,7 +147,7 @@
     "    #iterate through all indexes needed\n",
     "    for u in range(size):\n",
     "        for v in range(size):\n",
-    "               E += P[v, u] * ( H[u, v] + F[u, v] )\n",
+    "               E += P[v, u] * (H[u, v] + F[u, v] )\n",
     "    return E * 0.5"
    ]
   },
