--- a/Hartree-Fock/Hartree_Fock.ipynb
+++ b/Hartree-Fock/Hartree_Fock.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Molecule\n",
-      "Basis Set: STO-3G\n",
+      "Basis Set: DEF2-SVP\n",
       "Total Number of Electrons: 2\n",
       "Atoms: \n",
       "     Atomic Number: 1, Electrons: 1, Coordinate: X: 1 Y: 1 Z: 1\n",
@@ -49,7 +49,7 @@
     "system.addAtom(atom(vector(1,1,1+R), 1,1))\n",
     "\n",
     "#add a basis set\n",
-    "system.addBasis(\"STO-3G\")\n",
+    "system.addBasis(\"DEF2-SVP\")\n",
     "\n",
     "system.display()"
    ]
@@ -66,37 +66,117 @@
      "output_type": "stream",
      "text": [
       "Overlap Matrix: \n",
-      "[[1.         0.65931821]\n",
-      " [0.65931821 1.        ]]\n",
+      "[[0.34548743 0.40251286 0.19696325 0.33225414]\n",
+      " [0.40251286 1.         0.33225414 0.88735458]\n",
+      " [0.19696325 0.33225414 0.34548743 0.40251286]\n",
+      " [0.33225414 0.88735458 0.40251286 1.        ]]\n",
       "\n",
       "Electron Kinetic Energy Matrix: \n",
-      "[[0.76003188 0.23645466]\n",
-      " [0.23645466 0.76003188]]\n",
+      "[[0.33485537 0.11822737 0.09340748 0.08500323]\n",
+      " [0.11822737 0.18292443 0.08500323 0.14938628]\n",
+      " [0.09340748 0.08500323 0.33485537 0.11822737]\n",
+      " [0.08500323 0.14938628 0.11822737 0.18292443]]\n",
       "\n",
       "Nucli 0-Electron Attraction Matrix: \n",
-      "[[-1.22661373 -0.59741731]\n",
-      " [-0.59741731 -0.65382716]]\n",
+      "[[-0.47597637 -0.38180154 -0.20152784 -0.30951973]\n",
+      " [-0.38180154 -0.5572631  -0.2314581  -0.47547765]\n",
+      " [-0.20152784 -0.2314581  -0.23651915 -0.25269883]\n",
+      " [-0.30951973 -0.47547765 -0.25269883 -0.47987484]]\n",
       "Nucli 1-Electron Attraction Matrix: \n",
-      "[[-0.65382716 -0.59741731]\n",
-      " [-0.59741731 -1.22661373]]\n",
+      "[[-0.23651915 -0.25269883 -0.20152784 -0.2314581 ]\n",
+      " [-0.25269883 -0.47987484 -0.30951973 -0.47547765]\n",
+      " [-0.20152784 -0.30951973 -0.47597637 -0.38180154]\n",
+      " [-0.2314581  -0.47547765 -0.38180154 -0.5572631 ]]\n",
       "\n",
       "Electron Repulsion Tensor: \n",
-      "[[[[0.77460594 0.44410766]\n",
-      "   [0.44410766 0.56967593]]\n",
+      "[[[[0.10708419 0.10246776 0.05313654 0.08357882]\n",
+      "   [0.10246776 0.17525454 0.07031022 0.15050796]\n",
+      "   [0.05313654 0.07031022 0.07405114 0.07891112]\n",
+      "   [0.08357882 0.15050796 0.07891112 0.1545552 ]]\n",
       "\n",
-      "  [[0.44410766 0.29702854]\n",
-      "   [0.29702854 0.44410766]]]\n",
+      "  [[0.10246776 0.10362009 0.0531264  0.08474782]\n",
+      "   [0.10362009 0.19040262 0.0744631  0.16420342]\n",
+      "   [0.0531264  0.0744631  0.07891112 0.08482407]\n",
+      "   [0.08474782 0.16420342 0.08482407 0.17054376]]\n",
+      "\n",
+      "  [[0.05313654 0.0531264  0.03190507 0.04542351]\n",
+      "   [0.0531264  0.09568738 0.04542351 0.08763449]\n",
+      "   [0.03190507 0.04542351 0.05313654 0.0531264 ]\n",
+      "   [0.04542351 0.08763449 0.0531264  0.09568738]]\n",
+      "\n",
+      "  [[0.08357882 0.08474782 0.04542351 0.07032537]\n",
+      "   [0.08474782 0.15637263 0.06464976 0.13782655]\n",
+      "   [0.04542351 0.06464976 0.07031022 0.0744631 ]\n",
+      "   [0.07032537 0.13782655 0.0744631  0.14598753]]]\n",
       "\n",
       "\n",
-      " [[[0.44410766 0.29702854]\n",
-      "   [0.29702854 0.44410766]]\n",
+      " [[[0.10246776 0.10362009 0.0531264  0.08474782]\n",
+      "   [0.10362009 0.19040262 0.0744631  0.16420342]\n",
+      "   [0.0531264  0.0744631  0.07891112 0.08482407]\n",
+      "   [0.08474782 0.16420342 0.08482407 0.17054376]]\n",
       "\n",
-      "  [[0.56967593 0.44410766]\n",
-      "   [0.44410766 0.77460594]]]]\n",
+      "  [[0.17525454 0.19040262 0.09568738 0.15637263]\n",
+      "   [0.19040262 0.39404451 0.14598753 0.34281567]\n",
+      "   [0.09568738 0.14598753 0.1545552  0.17054376]\n",
+      "   [0.15637263 0.34281567 0.17054376 0.36477834]]\n",
+      "\n",
+      "  [[0.07031022 0.0744631  0.04542351 0.06464976]\n",
+      "   [0.0744631  0.14598753 0.07032537 0.13782655]\n",
+      "   [0.04542351 0.07032537 0.08357882 0.08474782]\n",
+      "   [0.06464976 0.13782655 0.08474782 0.15637263]]\n",
+      "\n",
+      "  [[0.15050796 0.16420342 0.08763449 0.13782655]\n",
+      "   [0.16420342 0.34281567 0.13782655 0.31026992]\n",
+      "   [0.08763449 0.13782655 0.15050796 0.16420342]\n",
+      "   [0.13782655 0.31026992 0.16420342 0.34281567]]]\n",
+      "\n",
+      "\n",
+      " [[[0.05313654 0.0531264  0.03190507 0.04542351]\n",
+      "   [0.0531264  0.09568738 0.04542351 0.08763449]\n",
+      "   [0.03190507 0.04542351 0.05313654 0.0531264 ]\n",
+      "   [0.04542351 0.08763449 0.0531264  0.09568738]]\n",
+      "\n",
+      "  [[0.07031022 0.0744631  0.04542351 0.06464976]\n",
+      "   [0.0744631  0.14598753 0.07032537 0.13782655]\n",
+      "   [0.04542351 0.07032537 0.08357882 0.08474782]\n",
+      "   [0.06464976 0.13782655 0.08474782 0.15637263]]\n",
+      "\n",
+      "  [[0.07405114 0.07891112 0.05313654 0.07031022]\n",
+      "   [0.07891112 0.1545552  0.08357882 0.15050796]\n",
+      "   [0.05313654 0.08357882 0.10708419 0.10246776]\n",
+      "   [0.07031022 0.15050796 0.10246776 0.17525454]]\n",
+      "\n",
+      "  [[0.07891112 0.08482407 0.0531264  0.0744631 ]\n",
+      "   [0.08482407 0.17054376 0.08474782 0.16420342]\n",
+      "   [0.0531264  0.08474782 0.10246776 0.10362009]\n",
+      "   [0.0744631  0.16420342 0.10362009 0.19040262]]]\n",
+      "\n",
+      "\n",
+      " [[[0.08357882 0.08474782 0.04542351 0.07032537]\n",
+      "   [0.08474782 0.15637263 0.06464976 0.13782655]\n",
+      "   [0.04542351 0.06464976 0.07031022 0.0744631 ]\n",
+      "   [0.07032537 0.13782655 0.0744631  0.14598753]]\n",
+      "\n",
+      "  [[0.15050796 0.16420342 0.08763449 0.13782655]\n",
+      "   [0.16420342 0.34281567 0.13782655 0.31026992]\n",
+      "   [0.08763449 0.13782655 0.15050796 0.16420342]\n",
+      "   [0.13782655 0.31026992 0.16420342 0.34281567]]\n",
+      "\n",
+      "  [[0.07891112 0.08482407 0.0531264  0.0744631 ]\n",
+      "   [0.08482407 0.17054376 0.08474782 0.16420342]\n",
+      "   [0.0531264  0.08474782 0.10246776 0.10362009]\n",
+      "   [0.0744631  0.16420342 0.10362009 0.19040262]]\n",
+      "\n",
+      "  [[0.1545552  0.17054376 0.09568738 0.14598753]\n",
+      "   [0.17054376 0.36477834 0.15637263 0.34281567]\n",
+      "   [0.09568738 0.15637263 0.17525454 0.19040262]\n",
+      "   [0.14598753 0.34281567 0.19040262 0.39404451]]]]\n",
       "\n",
       "Electronic Hamiltonian :\n",
-      "[[-1.12040901 -0.95837996]\n",
-      " [-0.95837996 -1.12040901]]\n",
+      "[[-0.37764014 -0.51627301 -0.30964821 -0.45597461]\n",
+      " [-0.51627301 -0.8542135  -0.45597461 -0.80156903]\n",
+      " [-0.30964821 -0.45597461 -0.37764014 -0.51627301]\n",
+      " [-0.45597461 -0.80156903 -0.51627301 -0.8542135 ]]\n",
       "\n"
      ]
     }
@@ -140,20 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.4676452  0.66501387]\n",
-      " [0.66501387 0.30132858]]\n",
-      "[[-1.21146407  0.54893404]\n",
-      " [ 1.21146407  0.54893404]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Prepare for the SCF procedure\n",
     "\n",
@@ -178,9 +247,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SCF Iteration #1, Electronic Energy: -1.8310000394614832 Hartrees, Total Energy: -1.116714325175769 Hartrees\n",
-      "SCF Iteration #2, Electronic Energy: -1.8310000394614832 Hartrees, Total Energy: -1.116714325175769 Hartrees\n",
-      "SCF Iteration #3, Electronic Energy: -1.8310000394614832 Hartrees, Total Energy: -1.116714325175769 Hartrees\n"
+      "SCF Iteration #1, Electronic Energy: -1.7948638000435568 Hartrees, Total Energy: -1.0805780857578426 Hartrees\n",
+      "SCF Iteration #2, Electronic Energy: -1.8369087613561248 Hartrees, Total Energy: -1.1226230470704106 Hartrees\n",
+      "SCF Iteration #3, Electronic Energy: -1.8387812998174158 Hartrees, Total Energy: -1.1244955855317014 Hartrees\n",
+      "SCF Iteration #4, Electronic Energy: -1.838851947052888 Hartrees, Total Energy: -1.1245662327671737 Hartrees\n",
+      "SCF Iteration #5, Electronic Energy: -1.8388545218993553 Hartrees, Total Energy: -1.1245688076136409 Hartrees\n",
+      "SCF Iteration #6, Electronic Energy: -1.8388546151168201 Hartrees, Total Energy: -1.1245689008311057 Hartrees\n",
+      "SCF Iteration #7, Electronic Energy: -1.8388546184872696 Hartrees, Total Energy: -1.1245689042015554 Hartrees\n",
+      "SCF Iteration #8, Electronic Energy: -1.8388546186091046 Hartrees, Total Energy: -1.1245689043233904 Hartrees\n",
+      "SCF Iteration #9, Electronic Energy: -1.8388546186135082 Hartrees, Total Energy: -1.124568904327794 Hartrees\n",
+      "SCF Iteration #10, Electronic Energy: -1.8388546186136676 Hartrees, Total Energy: -1.1245689043279534 Hartrees\n",
+      "SCF Iteration #11, Electronic Energy: -1.8388546186136734 Hartrees, Total Energy: -1.1245689043279592 Hartrees\n",
+      "SCF Iteration #12, Electronic Energy: -1.8388546186136738 Hartrees, Total Energy: -1.1245689043279596 Hartrees\n",
+      "SCF Iteration #13, Electronic Energy: -1.8388546186136734 Hartrees, Total Energy: -1.1245689043279592 Hartrees\n",
+      "SCF Iteration #14, Electronic Energy: -1.8388546186136743 Hartrees, Total Energy: -1.12456890432796 Hartrees\n",
+      "SCF Iteration #15, Electronic Energy: -1.8388546186136743 Hartrees, Total Energy: -1.12456890432796 Hartrees\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Final SCF Energy: -1.8388546186136743\n",
+      "\n",
+      "[-0.59323887  0.19686007  0.47824736  1.03593055]\n",
+      "[[-0.37764014 -0.51627301 -0.30964821 -0.45597461]\n",
+      " [-0.51627301 -0.8542135  -0.45597461 -0.80156903]\n",
+      " [-0.30964821 -0.45597461 -0.37764014 -0.51627301]\n",
+      " [-0.45597461 -0.80156903 -0.51627301 -0.8542135 ]]\n"
      ]
     }
    ],
@@ -227,7 +317,14 @@
     "    totalE = E[sizeE-1] + scf.nuclearRepulsion(system)\n",
     "    \n",
     "    #display information about current SCF iteration to the user\n",
-    "    print(\"SCF Iteration #\" + str(sizeE) + \", Electronic Energy: \" + str(E[sizeE-1]) + \" Hartrees, Total Energy: \" + str(totalE) + \" Hartrees\")"
+    "    print(\"SCF Iteration #\" + str(sizeE) + \", Electronic Energy: \" + str(E[sizeE-1]) + \" Hartrees, Total Energy: \" + str(totalE) + \" Hartrees\")\n",
+    "    \n",
+    "print(\"-\"*50)\n",
+    "print()\n",
+    "print(\"Final SCF Energy: \" + str(E[sizeE-1]))\n",
+    "print()\n",
+    "print(MOEnergy)\n",
+    "print(H)"
    ]
   }
  ],
