Specifed Units in Comments

--- a/Hartree-Fock/Hartree_Class.ipynb
+++ b/Hartree-Fock/Hartree_Class.ipynb
@@ -133,40 +133,7 @@
     "            print(\"MO Energies: \" + str(self.MOEnergy))\n",
     "            print(\"\\n\")\n",
     "            \n",
-    "        return self.totalE\n",
-    "    \n",
-    "#--------------------------------------------------------------------------------\n",
-    "\n",
-    "    def vibrationalEnergy(self, potentialFunction, mu):\n",
-    "        \n",
-    "        import scipy.integrate as integrate\n",
-    "        \n",
-    "        basis = self.molecularSystem.getBasis()\n",
-    "        size = len(basis)\n",
-    "        \n",
-    "        V = np.zeros([size, size])\n",
-    "        S = np.zeros([size, size])\n",
-    "        \n",
-    "        for index1, psi1 in enumerate(basis):\n",
-    "            for index2, psi2 in enumerate(basis):\n",
-    "                \n",
-    "                constant = 1\n",
-    "                \n",
-    "                for cg1 in psi1.contractedGaussians:\n",
-    "                    for cg2 in psi2.contractedGaussians:\n",
-    "                        \n",
-    "                        V[index1, index2] += integrate.quad(lambda x : cg1.compute(x) * potentialFunction(x) *cg2.compute(x), -100, 100)[0]\n",
-    "                        \n",
-    "                        \n",
-    "        H = self.T + V\n",
-    "        \n",
-    "        \n",
-    "        return self.X * np.linalg.eig(H)[0]\n",
-    "        \n",
-    "        print(\"TEST\")\n",
-    "        print(np.array(self.S))\n",
-    "        print(\"S\"*20)\n",
-    "        print(S) "
+    "        return self.totalE"
    ]
   }
  ],
