--- a/Hartree-Fock/Hartree_SCF.ipynb
+++ b/Hartree-Fock/Hartree_SCF.ipynb
@@ -56,7 +56,7 @@
     "<p>\n",
     "    <br />\n",
     "    The two electron term relates the electron density and the electron-electron repulsion term together, which are then used to generate the next Fock matrix, allowing the Fock matrix to become a function of the electron density. This allows for the iterative nature of the SCF procedure, as each Fock matrix is based upon the electron density of the previous Fock matrix. The two electron term is referred to as the $G$ matrix, and is computed as follows:\n",
-    "    $$ G_{\\mu v} = \\sum_{\\lambda\\sigma}{P_{\\lambda\\sigma}[ (\\mu v|\\sigma\\lambda) - \\dfrac{1}{2}(\\mu\\lambda|\\sigma v) ]} $$ $(\\mu v|\\sigma\\lambda)$ is equal to the electron-electron repulsion matrix at the coressponding indexes.\n",
+    "    $$ G_{\\mu v} = \\sum_{\\lambda\\sigma}{P_{\\lambda\\sigma}[ (\\mu v|\\sigma\\lambda) - \\dfrac{1}{2}(\\mu\\lambda|\\sigma v) ]} $$ $(\\mu v|\\sigma\\lambda)$ is equal to the electron-electron repulsion matrix at the coresponding indexes.\n",
     "    \n",
     "</p>    "
    ]
