--- a/Hartree-Fock/Potential_Energy_Surface.ipynb
+++ b/Hartree-Fock/Potential_Energy_Surface.ipynb
@@ -857,8 +857,7 @@
     "delta = (endR - startR) / step\n",
     "currentR = startR\n",
     "\n",
-    "print()\n",
-    "\n",
+    "#Main While Loop to repeatedly call the Hartree-Fock routine to generate the potential energy surface\n",
     "while(not(currentR >= endR)):\n",
     "    \n",
     "    #define the molecular system\n",
@@ -872,15 +871,10 @@
     "    HF = HartreeFock.HF(system, convergenceCritera, maxIterations)\n",
     "\n",
     "    #Store Bond distance, associated Energy, and MO Energies\n",
-    "    # Concert Length to NM\n",
-    "    R.append(currentR) #* pow(10, -10))\n",
-    "    #Convert hartrees to cm-1\n",
-    "    E.append(HF.SCF())#* 2.19 * pow(10, 5))\n",
+    "    R.append(currentR) \n",
+    "    E.append(HF.SCF())\n",
     "    MOEnergy.append(HF.MOEnergy)\n",
-    "    basisSets.append( system.getBasis() )\n",
-    "    Xs.append( HF.X )\n",
-    " \n",
-    "    #clear_output()\n",
+    "    \n",
     "    print(\"Hartree-Fock Computation: \" + str(currentR * 100 // endR) + \"%\")\n",
     "    \n",
     "    #update the current intenuclear distance\n",
@@ -941,12 +935,9 @@
     "from plotly.offline import iplot, init_notebook_mode\n",
     "init_notebook_mode(connected=True)\n",
     "\n",
-    "#prepare morse potential for graphing\n",
-    "#morse = morsePotential(R, E)\n",
     "\n",
     "#create a curve fitted morsePotential of the data\n",
     "#uses the least squares method to fit the potential via SciPy\n",
-    "#def morsePotential(r, r0, A, D, a1, a2, a3):\n",
     "def morsePotential(r, r0, a, D, c):\n",
     "    #return c - D*( 1 + a*(r-r0)  ) * np.exp(-a*(r-r0))\n",
     "    return c+ D*pow( (1-np.exp(-(a*(r-r0)))), 2) \n",
